--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                     <div class="content">
                         <h4>Why Choose us</h4>
                         <h2>Milltech HAS ALWAYS ALIGNED WITH CHANGING TECHNOLOGY</h2>
-                        <a class="btn btn-light effect btn-md" href="#">Start a Projects</a>
+                        <a class="btn btn-light effect btn-md" href="./contact.html">Start a Projects</a>
                     </div>
                 </div>
                 <div class="col-lg-4 info">
